--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="node_modules/aos/dist/aos.css">
         <link rel="stylesheet" href="assets/style.css">
         <title>Titre</title>
     </head>
     <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Ninth navbar example">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent  fixed-top" aria-label="Ninth navbar example" id="header">
         <div class="container-xl">
             <a class="navbar-brand" href="#">Container XL</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07XL" aria-controls="navbarsExample07XL" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,75 +38,86 @@
             </div>
         </div>
     </nav>
-    <div id="carouselExampleDark" class="carousel  slide" data-bs-ride="carousel">
+    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class="active" aria-current="true"></button>
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="">
+            <div class="carousel-item bg-image">
                 <img src="assets/images/01.jpg" class="d-block w-100" alt="..." height="" style="">
-                <div class="carousel-caption d-none d-md-block ">
-                    <h1>First slide label</h1>
-                    <p>Some representative placeholder content for the first slide.</p>
-                </div>
-            </div>
-            <div class="carousel-item" data-bs-interval="">
-                <img src="assets/images/02.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h1>Second slide label</h1>
-                    <p>Some representative placeholder content for the second slide.</p>
+                <div class="container">
+                    <div class="carousel-caption text-start" >
+                        <h1>Example headline.</h1>
+                        <p>Some representative placeholder content for the first slide of the carousel.</p>
+                        <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+                    </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="assets/images/03.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block" style="">
-                    <h1>Third slide label</h1>
-                    <p>Some representative placeholder content for the third slide.</p>
+                <img src="assets/images/02.jpg" class="d-block w-100" alt="..." height="" style="">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>Another example headline.</h1>
+                        <p>Some representative placeholder content for the second slide of the carousel.</p>
+                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item active">
+                <img src="assets/images/03.jpg" class="d-block w-100" alt="..." height="" style="">
+                <div class="container">
+                    <div class="carousel-caption text-end">
+                        <h1>One more for good measure.</h1>
+                        <p>Some representative placeholder content for the third slide of this carousel.</p>
+                        <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+                    </div>
                 </div>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
     </div>
+
     <div class="container">
-        <div class="row my-5 ">
+        <div class="row featurette my-5 " data-aos="fade-right">
             <div class="col-xl-12 col-lg-12 col-sm-12 col-md-12 col-12 mb-5 text-center">
                 <h3>Nos Prestations</h3>
             </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 mt-4">
-                <div class="card prestation" style="width: 18rem;">
-                    <img src="assets/images/dev.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Développement d'application Web</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
+            <div class="col-md-7">
+                <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
+                <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
             </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 mt-4">
-                <div class="card prestation" style="width: 18rem;">
-                    <img src="assets/images/web.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Développement de site web</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
+            <div class="col-md-5">
+                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+
             </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 mt-4">
-                <div class="card prestation" style="width: 18rem;">
-                    <img src="assets/images/cm.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Community Management</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
+        </div>
+        <div class="row featurette my-5 " data-aos="fade-left">
+            <div class="col-md-7 order-md-2">
+                <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
+                <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+            </div>
+            <div class="col-md-5 order-md-1">
+                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+
+            </div>
+        </div>
+        <div class="row featurette my-5 " data-aos="fade-right">
+            <div class="col-md-7">
+                <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
+                <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+            </div>
+            <div class="col-md-5">
+                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+
             </div>
         </div>
         <div class="row mb-5">
@@ -114,7 +126,7 @@
                 <p> Description</p>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-4">
-                <div class="card team mb-3" style="max-width: 540px;">
+                <div class="card team mb-3" style="max-width: 540px;" data-aos="zoom-in-up">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <img src="assets/images/team1.jpg" class="img-fluid rounded-start" alt="...">
@@ -130,7 +142,7 @@
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-4">
-                <div class="card team mb-3" style="max-width: 540px;">
+                <div class="card team mb-3" style="max-width: 540px;" data-aos="zoom-in-up">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <img src="assets/images/team2.jpg" class="img-fluid rounded-start" alt="...">
@@ -147,6 +159,13 @@
             </div>
         </div>
     </div>
+    <footer class="footer mt-auto py-3 bg-light bg-dark">
+        <div class="container">
+            <span class="text-muted">Place sticky footer content here.</span>
+        </div>
+    </footer>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="node_modules/aos/dist/aos.js"></script>
+    <script src="assets/app.js"></script>
     </body>
 </html>
