--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
     </div>
 
     <div class="container">
+        <div class="row my-5">
+            <div class="col-12 text-center">
+                <h3>A propos de nous </h3>
+            </div>
+            <div class="col-12">
+                
+            </div>
+        </div>
         <div class="row featurette my-5 " data-aos="fade-right">
             <div class="col-xl-12 col-lg-12 col-sm-12 col-md-12 col-12 mb-5 text-center">
                 <h3>Nos Prestations</h3>
