--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
                 </ul>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item mx-2">
-                        <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                        <a class="nav-link " aria-current="page" href="#">Accueil</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link " aria-current="page" href="#">A propos</a>
                     </li>
                     <li class="nav-item mx-2">
                         <a class="nav-link" href="#">Nos préstations</a>
@@ -88,11 +91,14 @@
 
     <div class="container">
         <div class="row my-5">
-            <div class="col-12 text-center">
+            <div class="col-12 text-center mb-5">
                 <h3>A propos de nous </h3>
             </div>
-            <div class="col-12">
-                
+            <div class="col-6" data-aos="fade-right">
+                <img src="assets/images/02.jpg" alt="" style="width: 100%;">
+            </div>
+            <div class="col-6" data-aos="fade-left">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis tincidunt nulla, eget lobortis dui imperdiet ac. Etiam lobortis eros ligula. Vivamus luctus tellus auctor augue tempus, sit amet bibendum libero tempus. In metus lorem, mattis sit amet efficitur in, mattis ac eros. Phasellus sodales interdum purus, at luctus massa porttitor ac. Nunc quis dignissim mi, et dictum tellus. Maecenas sit amet euismod justo. Etiam augue sem, hendrerit sit amet nisl eu, pulvinar pulvinar enim. Integer malesuada nisl in purus commodo, in blandit augue lacinia. Suspendisse elementum varius lectus, in iaculis leo elementum a. Sed commodo a ante at mollis.
             </div>
         </div>
         <div class="row featurette my-5 " data-aos="fade-right">
@@ -163,6 +169,22 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="row my-5">
+            <div class="col-12 text-center">
+                <h3>Nous contacter</h3>
+            </div>
+            <div class="offset-2 col-8 offset-2 ">
+
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
             </div>
         </div>
